--- a/src/style.scss
+++ b/src/style.scss
@@ -3,46 +3,45 @@
   flex-direction: column;
 }
 .counter {
-  flex:1;
+  flex: 1;
   font-size: 3rem;
   flex-direction: column;
   justify-content: center;
   margin: 2rem 0;
 
   ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-
-      li {
-          border: 1px solid transparent;
-          padding: .5rem;
-
-          &:hover {
-              cursor: pointer;
-              border: 1px solid #ddd;
-              border-radius: 5px;
-          }
-      }
-  }
-}
-
-
-.categories{
-  border: yellow solid 1px;
-  ul{
     list-style-type: none;
-    li{
-      display: inline-block;
-      margin: 5px;
+    margin: 0;
+    padding: 0;
+
+    li {
+      border: 1px solid transparent;
+      padding: 0.5rem;
+
       &:hover {
         cursor: pointer;
         border: 1px solid #ddd;
         border-radius: 5px;
+      }
     }
-    }
-    p{
+  }
+}
+
+.categories {
+  padding: 5px;
+  span {
+    p {
       display: inline-block;
     }
   }
+}
+
+.activeCategory {
+  margin: auto;
+}
+
+.products {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
